2007-12-17  Luca Bruno  <lethalman88@gmail.com>

	* plugins/x11: added (thanks to Rahul aka blufox)

	* SConstruct: build x11 plugin

	* st/kernel/CPointer.st: added

	* st/kernel/CObject.st (free): added
	(finalize): added

	* syx/syx-object.h: 

	* syx/syx-object.c (syx_class_initialize): added

	* syx/syx-interp.h (syx_interp_is_initialized): added

	* syx/syx-init.c (_syx_file_in_basic): file in CPointer.st and CObject.st

	* syx/syx-primitives.c (CPointer_free): added

	* plugins/SConscript: add x11 plugin

	* plugins/gtk/SConscript: add Swig interface files

2007-12-16  Luca Bruno  <lethalman88@gmail.com>

	* st/kernel/CObject.st: added

	* syx/syx-init.c (_syx_file_in_basic): file in CObject.st

2007-12-14  Luca Bruno  <lethalman88@gmail.com>

	== Released 0.1.5 version ==	

        New process/context API

        * plugins/wingui/plugin-init.c (WndProcedure): 
        * plugins/gtk/plugin-init.c (syx_g_closure_marshal):
        * plugins/gtk/plugin-init.c (syx_plugin_initialize): 
        * syx/syx-interp.h (syx_interp_get_current_process): added
        
2007-11-18  Luca Bruno  <lethalman88@gmail.com>

        * st/kernel/ArrayedCollection.st (withAll:startingAt): added

        * st/kernel/OrderedCollection.st (asArray): added

        * syx/syx-interp.c (syx_exec_state_fetch): updated to complain new process execution

        * syx/syx-object.c (syx_process_new): do not require a context anymore
        (syx_method_context_new): setup the Process to hold the new context and copy arguments into the stack
        (syx_block_context_new): same as method context, and use the same frame of the outer context
        All calls have been updated

        * Removed all stacks from contexts and created a stack per process

        * Gave an important speed boost up

        * syx/syx-primitives.c (ArrayedCollection_replaceFromToWithStartingAt): in substitution of ArrayedCollection_replaceFromToWith
        (StdIOStream_nextPut): added