@@ -1,3 +1,7 @@
+2007-12-18  Luca Bruno  <lethalman88@gmail.com>
+
+	* st/foreign: added foreign structure interface support for C
+
 2007-12-17  Luca Bruno  <lethalman88@gmail.com>
 
 	* plugins/x11: added (thanks to Rahul aka blufox)
